# C2ServerAPI

./: .gitignore  BuildExe.bat  BuildExe.ps1  C2ServerAPIExample.py  Doxyfile  README.md  Run.bat  ____init_____8py.html  __init__.py  _c2_server_a_p_i_example_8py.html  _c2_server_a_p_i_example_8py.js  _r_e_a_d_m_e_8md.html  a2sTest.py  a2s_8py.html  a2s_8py.js  a2s_test_8py.html  annotated.html  annotated_dup.js  class_c2_server_a_p_i_1_1src_1_1a2s_1_1_a2_s___i_n_f_o-members.html  class_c2_server_a_p_i_1_1src_1_1a2s_1_1_a2_s___i_n_f_o.html  class_c2_server_a_p_i_1_1src_1_1gui_server_1_1_chivalry-members.html  class_c2_server_a_p_i_1_1src_1_1gui_server_1_1_chivalry.html  class_c2_server_a_p_i_1_1src_1_1gui_server_1_1_chivalry.js  class_c2_server_a_p_i_1_1src_1_1server_register_1_1_registration-members.html  class_c2_server_a_p_i_1_1src_1_1server_register_1_1_registration.html  class_c2_server_a_p_i_1_1src_1_1server_register_1_1_registration.js  classes.html  classgui_server_1_1_chivalry-members.html  classgui_server_1_1_chivalry.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxyfilter__python_8py.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  getServersTest.py  guiServer.py  gui_server_8py.html  (+44 more)
html/: annotated.html  classes.html  classgui_server_1_1_chivalry.html  functions.html  functions_func.html  index.html  input_lib_8py.html  input_lib_8py.js  mainpage_8md.html  namespacegui_server.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  (+1 more)
(+64 files in other folders)
